melhorias na lista 4

--- a/Lista_1/lista_1.tex
+++ b/Lista_1/lista_1.tex
@@ -163,7 +163,7 @@ e $Y = 0$ caso contrário. Responda às perguntas abaixo:
 \begin{enumerate}
     \item Determine $P [Y = 1]$.
     \begin{tcolorbox}[colframe=black, title=Resposta:]
-        Seja $U$ o espaço amostral com todos os valores possíveis de $X$, ou seja, $U = \{1, 2, 3, \dots, 20\}$. Seja $C=\{2, 3, 5, 7, 11, 13, 17, 19\}$ o evento com os números primos em $U$. Como os lançamentos são intependentes e a probabilidade de sair um número primo é $P[x_i] = \frac{1}{20}, \quad \forall i \in U$, a probabilidade de $Y = 1$ é dada por:
+        Seja $U$ o espaço amostral com todos os valores possíveis de $X$, ou seja, $U = \{1, 2, 3, \dots, 20\}$. Seja $C=\{2, 3, 5, 7, 11, 13, 17, 19\}$ o evento com os números primos em $U$. Como os lançamentos são independentes e a probabilidade de sair um número primo é $P[x_i] = \frac{1}{20}, \quad \forall i \in U$, a probabilidade de $Y = 1$ é dada por:
         $$P[Y = 1] = \sum_{j \in C} P[X = j] = \sum_{j \in C} \frac{1}{20} = \frac{|C|}{20} = \frac{8}{20} = \underline{\frac{2}{5} \quad \vline}$$
     \end{tcolorbox}
     \newpage
