--- a/Projeto/relatorio/sbc-template.tex
+++ b/Projeto/relatorio/sbc-template.tex
@@ -7,12 +7,13 @@
 
 \usepackage{float}
 \usepackage{mathtools}
+\usepackage{needspace}
      
 \sloppy
 
-\title{Instructions for Authors of SBC Conferences\\ Papers and Abstracts}
+\title{Planejamento Dinâmico de Rotas para VANTs em Patrulha Naval}
 
-\author{Luiz Henrique Souza Caldas, Daniel Ratton Figueiredo} 
+\author{Luiz Henrique Souza Caldas\inst{1}, Daniel Ratton Figueiredo\inst{1}} 
 
 
 \address{Programa de Engenharia de Sistemas e Computação (PESC) \\ Instituto Alberto Luiz Coimbra de Pós-Graduação e Pesquisa de Engenharia (COPPE) \\ Universidade Federal do Rio de Janeiro (UFRJ)\\
@@ -36,6 +37,7 @@
 \include{01_introducao}
 \include{02_objetivo}
 \include{03_metodologia}
+\include{04_resultados}
 
 
 \bibliographystyle{sbc}
